<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4add6a"
    tools:context=".ui.product.ProductDetailActivity">

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/productImageSlider"
        android:layout_width="317dp"
        android:layout_height="144dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="47dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/productDetailBackButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="347dp"
        android:background="#4add6a"
        android:contentDescription="@string/productDetailBackButton"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backbutton"
        app:tint="#FFFFFF"
        tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

    <Button
        android:id="@+id/productDetailOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="47dp"
        android:backgroundTint="#C3C3C3"
        android:text="@string/reserver"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productImageSlider" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="246dp"
        android:layout_marginBottom="13dp"
        android:text="@string/productDescriptionView"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/productDetailDescriptionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/productDetailDescriptionText"
        android:layout_width="313dp"
        android:layout_height="154dp"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="18dp"
        android:text="@string/productDetailDescriptionHint"
        android:textColor="#004D40"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="12dp"
        android:text="@string/productDetailPublishedByView"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/productdetailPublishedText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="148dp"
        android:text="@string/productDetailExpiresOn"
        android:textColor="#D50000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/productdetailExpiresOnText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="15dp"
        android:text="@string/productDetailBy"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/productdetailByText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/productdetailPublishedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="16dp"
        android:text="@string/productDetailPublishHint"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/productdetailByText"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/productdetailByText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="12dp"
        android:text="@string/productDetailByHint"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/productdetailExpiresOnText"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/productdetailExpiresOnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="184dp"
        android:layout_marginBottom="148dp"
        android:text="@string/productDetailExpiresHint"
        android:textColor="#D50000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="242dp"
        android:layout_height="41dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="56dp"
        android:contentDescription="@string/productDetailRatingBarView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="11dp"
        android:text="@string/productDetailReviewView"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>