<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clean_background"
    tools:context=".ui.order.AddOrderActivity">

    <EditText
        android:id="@+id/expirationDateEdit"
        android:layout_width="224dp"
        android:layout_height="48dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/expirationDateHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addPostButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/expirationDateView"
        app:layout_constraintTop_toBottomOf="@+id/productDescriptionEdit" />

    <EditText
        android:id="@+id/namePostEdit"
        android:layout_width="224dp"
        android:layout_height="48dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="49dp"
        android:ems="10"
        android:hint="@string/namePostHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/productDescriptionEdit"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="132dp"
        android:layout_height="88dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/placeholderText"
        android:foregroundGravity="right"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/placeholder_image" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="132dp"
        android:layout_height="88dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="65dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/placeholderText"
        android:foregroundGravity="center"
        android:scaleType="centerInside"
        app:layout_constraintStart_toEndOf="@+id/imageButton1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/placeholder_image" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="132dp"
        android:layout_height="88dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="65dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/placeholderText"
        android:foregroundGravity="left"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/placeholder_image" />

    <TextView
        android:id="@+id/foodTypeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/foodTypeView"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton1" />

    <TextView
        android:id="@+id/namePostView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/namePostView"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodTypeView" />

    <TextView
        android:id="@+id/expirationDateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/expirationDateView"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productDescriptionEdit" />

    <EditText
        android:id="@+id/productDescriptionEdit"
        android:layout_width="370dp"
        android:layout_height="233dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/productDescriptionViewHint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productDescriptionView" />

    <TextView
        android:id="@+id/productDescriptionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/productDescriptionView"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namePostView" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="242dp"
        android:layout_height="60dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="23dp"
        android:hint="Hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3">


        <EditText
            android:id="@+id/foodTypeEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/foodTypeHint"
            android:inputType="textPersonName"
            android:text="Fruits"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="194dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addPostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/classic_green"
        android:text="@string/addPost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>