<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.order.ProductCardFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="100dp"
            android:layout_height="86dp"
            android:layout_gravity="end"
            android:adjustViewBounds="true"
            android:contentDescription="@string/favorite_button_message"
            android:scaleType="centerCrop"
            android:src="@drawable/favorite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/productImageView"
                android:layout_width="339dp"
                android:layout_height="354dp"
                android:layout_gravity="center"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="3dp"
                android:contentDescription="@string/productImageViewString"
                android:src="@drawable/placeholderfragment_image" />

            <TextView
                android:id="@+id/productNameView"
                android:layout_width="379dp"
                android:layout_height="89dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="43dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/namePostView"
                android:textSize="34sp" />

            <Button
                android:id="@+id/productReserverButton"
                android:layout_width="296dp"
                android:layout_height="94dp"
                android:layout_marginStart="58dp"
                android:layout_marginTop="58dp"
                android:layout_marginEnd="58dp"
                android:layout_marginBottom="28dp"
                android:backgroundTint="#D6D4D4"
                android:text="@string/reserver"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>